--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,7 @@
     "source.fixAll.eslint": "explicit",
     "source.organizeImports": "explicit"
   },
-  "files.autoSave": "onWindowChange",
+  "files.autoSave": "afterDelay",
   "files.exclude": {
     "**/.next": true,
     "**/node_modules": true,
@@ -25,7 +25,7 @@
   },
   "files.watcherExclude": {
     "**/.next/**": true,
-    "**/node_modules/**": true
+    "**/node_modules/**": true,
   },
   "editor.tabSize": 2,
   "editor.insertSpaces": true,
