--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,6 @@
 		"test": "jest --watch"
 	},
 	"dependencies": {
-		"@sentry/nextjs": "^8.55.0",
 		"@auth0/nextjs-auth0": "4.6.1",
 		"@clerk/nextjs": "6.30.0",
 		"@dnd-kit/core": "6.3.1",
@@ -43,6 +42,7 @@
 		"@mui/x-date-pickers": "8.5.1",
 		"@phosphor-icons/react": "2.1.10",
 		"@react-pdf/renderer": "4.3.0",
+		"@sentry/nextjs": "^8.55.0",
 		"@supabase/ssr": "0.6.1",
 		"@supabase/supabase-js": "2.50.0",
 		"@testing-library/dom": "10.4.0",
@@ -51,6 +51,7 @@
 		"@tiptap/react": "2.14.0",
 		"@tiptap/starter-kit": "2.14.0",
 		"dayjs": "1.11.13",
+		"dev": "^0.1.3",
 		"embla-carousel": "8.6.0",
 		"embla-carousel-react": "8.6.0",
 		"i18next": "25.2.1",
@@ -59,6 +60,7 @@
 		"next-i18next": "15.4.2",
 		"oidc-client-ts": "3.2.1",
 		"openid-client": "6.5.1",
+		"pnpm": "^10.14.0",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"react-dropzone": "14.3.8",
