--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
+		"build:strict": "NO_SUPPRESS_WARNINGS=1 next build",
 		"start": "next start",
 		"lint": "next lint",
 		"lint:fix": "next lint --fix",
