--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
   },
   "pnpm": {
     "overrides": {
-      "@clerk/backend": "^2.7.0",
-      "@opentelemetry/instrumentation": "0.57.2",
-      "@opentelemetry/api": "1.9.0"
+      "@clerk/backend": "^2.7.0"
     }
   },
   "engines": {
