--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,32 +12,16 @@
       }
     ]
   },
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
-    "source.organizeImports": true
-  },
-  "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "files.autoSave": "onWindowChange",
-  "files.exclude": {
-    "**/.next": true,
-    "**/node_modules": true,
-    "**/dist": true,
-    "**/build": true
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit",
+    "source.organizeImports": "explicit"
   },
-  "files.watcherExclude": {
-    "**/.next/**": true,
-    "**/node_modules/**": true
-  },
-
+  "files.autoSave": "afterDelay",
   "editor.tabSize": 2,
   "editor.insertSpaces": true,
   "editor.detectIndentation": false,
-  "files.autoSave": "onWindowChange",
-  "editor.formatOnSave": true,
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  },
   "eslint.validate": [
     "javascript",
     "javascriptreact",
@@ -55,7 +39,6 @@
     "**/.next/**": true,
     "**/node_modules/**": true
   },
-
   "github.copilot.chat.codeGeneration.useInstructionFiles": true,
   "chat.promptFiles": true,
   "chat.promptFilesLocations": {
