feat(extraction,storage): improve extraction fallbacks, debug logs, and fix compose env for MinIO

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,3 +29,5 @@ mcp>=1.2.0,<2.0.0
 
 # Some environments default to psycopg2; include it to avoid import errors
 psycopg2-binary==2.9.9
+
+openai-agents
