--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
 		"test": "jest --watch"
 	},
 	"dependencies": {
+		"@stripe/react-stripe-js": "2.8.0",
+		"@stripe/stripe-js": "4.10.0",
 		"@sentry/nextjs": "^8.55.0",
 		"@auth0/nextjs-auth0": "4.6.1",
 		"@clerk/nextjs": "6.30.0",
