--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -4,3 +4,4 @@ testpaths = tests
 python_files = test_*.py
 python_functions = test_*
 python_classes = Test*
+asyncio_default_fixture_loop_scope = function
