--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 		"test": "jest --watch"
 	},
 	"dependencies": {
+		"swr": "2.3.3",
 		"@stripe/react-stripe-js": "2.8.0",
 		"@stripe/stripe-js": "4.10.0",
 		"@sentry/nextjs": "^8.55.0",
