--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,6 +24,7 @@ clerk-backend-api==3.1.1
 sentry-sdk[fastapi]==2.13.0
 python-jose[cryptography]==3.3.0
 stripe==11.4.1
+aiosqlite==0.19.0
 
 # MCP server SDK for prompt_server (need server.fastmcp)
 mcp>=1.2.0,<2.0.0
